# helio

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml  uiy.m3u8
python/: start.py
python/stardust/: __init__.py  _stardust.pyi  env_example  setup_dirs.py  start.py  t.py
python/stardust/_experiments/: handlesignal.py  new.py  r.py  t.py  test.py  tgh.py  uo.py  w.py  ws.py
python/stardust/apps/: __apps__.py  arg_parser.py  manage_app_db.py  manage_capture.py  models_app.py  shared_cmds.py
python/stardust/apps/chaturbate/: api_get_jsons.py  api_streamer_bio.py  api_streamer_online.py  cli.py  db_chaturbate.py  handleurls.py  models.py
python/stardust/apps/myfreecams/: cli.py  handleurls.py  helper.py  json_models.py
python/stardust/apps/stripchat/: cli.py
python/stardust/config/: settings.py
python/stardust/database/: camsoda.sql  db_base.py  helio.sql  myfreecams.sql
python/stardust/database/db/: myfreecams.1.sqbpro  myfreecams.sqlite37  myfreecams.sqlite38
python/stardust/ffmpeg_files/: ffmpeg_saver.py
python/stardust/utils/: contactsheet.py  general.py  handle_m3u8.py
python/tests/: test_all.py
src/: lib.rs
stardust/: .env_example  4.py  __init__.py  env_example  setup.py  setup_dirs.py  start.py
stardust/apps/: __apps__.py  arg_parser.py  manage_app_db.py  manage_capture.py  models_app.py  shared_cmds.py
stardust/apps/camsoda/: cli.py
stardust/apps/chaturbate/: api_get_jsons.py  api_streamer_bio.py  api_streamer_online.py  api_videocontext.py  argpar.py  capture.py  capture_streamer.py  cli.py  clivalidations.py  db.py  db_chaturbate.py  db_query.py  db_write.py  ffmpeg_saver.py  handleurls.py  manage_capture.py  models.py  set_streamer_data.py  validations.py
stardust/apps/myfreecams/: api_get_jsons.py  api_streamer_bio.py  api_streamer_online.py  api_ws_json.py  app_req.py  app_res.py  cli.py  db_myfreecams.py  db_myfreemcams.py  db_write.py  handlers.py  handleurls.py  helper.py  json_models.py  models_mfc.py  server.py  web_browser.py
stardust/apps/stripchat/: cli.py
stardust/capture/: ffmpeg_saver.py
stardust/cli/: commandline.py
stardust/config/: arg_parser.py  chroma.py  constants.py  log_display_setting.py  settings.py
stardust/database/: base_db.py  camsoda.sql  chaturbate.sql  db_base.py  dbconfig.sql  helio.sql  myfreecams.sql  stripchat.sql
stardust/ffmpeg_files/: ffmpeg_data.py  ffmpeg_saver.py
stardust/utils/: applogging.py  contactsheet.py  datasize.py  general.py  handle_m3u8.py  heliologger.py  timer.py
