[project]
name = "helio"
dynamic = ["version"]
description = "Capture video streams"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "cmd2>=2.5.11",
    "imagehash>=4.3.2",
    "m3u8>=6.0.0",
    "mitmproxy>=11.1.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "pygithub>=2.6.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "rnet>=2.2.9",
    "seleniumbase>=4.38.0",
    "tabulate>=0.9.0",
]

# required to use scripts without a build-system
[tool.uv]
cache-dir = "/mnt/Alpha/_bey/uv/.uv_cache"
package = true

[project.urls]
repository = "https://github.com/beyChill/helio"

[project.scripts]
start = "stardust.start:main"

[tool.setuptools]
py-modules = ["stardust"]

[tool.pyright]
exclude = ['**/_experiments', ".vscode/*.py", "**/site-packages/**/*.py", ".venv"]
linetoolong = false

[tool.ruff]
exclude = ['_experiments']

[tool.ruff.lint]
# Avoid enforcing line-length violations
ignore = ["E501"]
