[project]
name = "helio"
dynamic = ["version"]
description = "Capture video streams"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "cmd2>=2.6.2",
    "imagehash>=4.3.2",
    "m3u8>=6.0.0",
    "pydantic-settings>=2.10.1",
    "pygithub>=2.6.1",
    "python-dotenv>=1.1.0",
    "rnet>=2.3.7",
    "tabulate>=0.9.0",
]

# required to use scripts without a build-system
[tool.uv]
package = true

[project.urls]
repository = "https://github.com/beyChill/helio"

[project.scripts]
start = "stardust.start:main"

[tool.setuptools]
py-modules = ["stardust"]

[tool.pyright]
exclude = ['**/_experiments', ".vscode/*.py", "**/site-packages/**/*.py", ".venv"]
linetoolong = false

[tool.ruff.lint]
# Avoid enforcing line-length violations
ignore = ["E501"]
