[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "helio"
description = "Capture video streams"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "cmd2>=2.7.0",
    "dotenv>=0.9.9",
    "m3u8>=6.0.0",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "rnet==2.3.9",
    "tabulate>=0.9.0",
]
[project.optional-dependencies]
tests = [
    "pytest",
]

# required to use scripts without a build-system
[tool.uv]
package = true

[tool.maturin]
python-source = "python"
module-name="stardust._stardust"
features = ["pyo3/extension-module"]

[project.urls]
repository = "https://github.com/beyChill/helio"

[project.scripts]
start = "stardust.start:main"
startcb = "stardust.apps.chaturbate.api_streamer_online:loop_cb_seek_capture"
startmfc = "stardust.apps.myfreecams.api_streamer_online:loop_mfc_seek_capture"

[tool.setuptools]
py-modules = ["stardust"]

[tool.pyright]
exclude = ['**/_experiments', ".vscode/*.py", "**/site-packages/**/*.py", ".venv"]
linetoolong = false

[tool.ruff.lint]
# Avoid enforcing line-length violations
ignore = ["E501"]

